<resources>
    <string name="app_name">CineMatchMe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="previous">Previous</string>

    <string name="hello_first_fragment">0</string>
    <string name="random_heading">Here is a random number between 0 and %d.</string>
    <string name="toast_button_text">Toast</string>
    <string name="random_button_text">Random</string>
    <string name="count_button_text">Count</string>
    <string name="toast_message">AAA</string>
    <string name="title_activity_add_movie">AddMovie</string>
    <string name="next">Next</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addMovieTitle">We need your help!</string>
    <string name="addMovieText">Our App is just starting out and we have a ton more movies to include! You could help with this by suggesting movies you haven\'t seen during your swiping</string>
    <string name="addMovieButton">Add A Movie!</string>
    <string name="title_activity_movie_exists_popup">movieExistsPopup</string>
    <string name="title_activity_add_movie_form">addMovieForm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_dropdown_option">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>