<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">

    <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_first_fragment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="30sp"/>

    <Button
            android:id="@+id/random_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_first" android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp" app:layout_constraintVertical_bias="0.521"/>
    <Button
            android:text="@string/toast_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/toast_button"
            app:layout_constraintTop_toBottomOf="@+id/textview_first"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <Button
            android:text="@string/count_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/count_button"
            app:layout_constraintTop_toBottomOf="@+id/textview_first"
            app:layout_constraintEnd_toStartOf="@+id/random_button"
            app:layout_constraintStart_toEndOf="@+id/toast_button" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.494" app:layout_constraintVertical_bias="0.521"/>
    <Button
            android:text="go to login!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/loginPage"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>