<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".swiping">


    <Button
        android:id="@+id/buttonToAddMovieForm"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginBottom="52dp"
        android:text="@string/addMovieButton"
        android:textSize="16sp"
        app:layout_anchorGravity="top|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="222dp"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/addMovieTitle"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="271dp"
        android:layout_height="231dp"
        android:layout_marginBottom="100dp"
        android:text="@string/addMovieText"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/buttonToAddMovieForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>